"Improve transaction table skeleton logic, adjust card spacing, and fix conditional rendering for loading state. Enhance mobile navbar responsiveness with CSS tweaks, refactor navbar interactions, and streamline link behavior.

--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -67,3 +67,12 @@
 	margin: 0 !important;
 }
 
+@media screen and (max-width: 767px) {
+	.navbar-end {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+	}
+}
+
